--- a/To Do List/Base.lproj/Main.storyboard
+++ b/To Do List/Base.lproj/Main.storyboard
@@ -1,24 +1,200 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xxl-DR-rug">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--To Do List-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="To_Do_List" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kmz-gZ-qAS">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="wdb-8r-hBr" detailTextLabel="wAl-uo-ffe" style="IBUITableViewCellStyleSubtitle" id="4qe-kd-HcI">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="4qe-kd-HcI" id="Wka-so-hH6">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="wdb-8r-hBr">
+                                                    <rect key="frame" x="15" y="5" width="33.5" height="20.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="wAl-uo-ffe">
+                                                    <rect key="frame" x="15" y="25.5" width="44" height="14.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="jRn-pM-2NZ" kind="show" identifier="EditItem" id="5Rm-Fa-MsB"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="To Do List" id="426-YO-t3U">
+                        <barButtonItem key="leftBarButtonItem" title="Edit" id="zaf-T2-qh1">
+                            <connections>
+                                <action selector="editBarButtonPressed:" destination="BYZ-38-t0r" id="Q8u-C2-OOU"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="F5b-T3-Djp">
+                            <connections>
+                                <segue destination="WU6-lQ-EhQ" kind="presentation" identifier="AddItem" id="aqU-vy-zfS"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="addBarButton" destination="F5b-T3-Djp" id="ZuU-7y-JCw"/>
+                        <outlet property="editBarButton" destination="zaf-T2-qh1" id="lut-rG-e38"/>
+                        <outlet property="tableView" destination="kmz-gZ-qAS" id="D6x-vb-ncg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="456.80000000000001" y="117.39130434782609"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="1bz-tx-kWo">
+            <objects>
+                <viewController id="jRn-pM-2NZ" customClass="DetailViewController" customModule="To_Do_List" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="rcu-1b-IkU">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="To Do Item:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W5X-Sz-dCy">
+                                <rect key="frame" x="16" y="112" width="343" height="32"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notes:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nBc-qe-2CP">
+                                <rect key="frame" x="16" y="213" width="343" height="32"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter To Do Item Here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NQ1-RZ-yih">
+                                <rect key="frame" x="16" y="153" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
+                                <connections>
+                                    <action selector="toDoFieldChanged:" destination="jRn-pM-2NZ" eventType="editingChanged" id="x6D-dg-XBu"/>
+                                </connections>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="uT3-gR-bGF">
+                                <rect key="frame" x="16" y="243" width="343" height="290"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="290" id="I8d-Zf-Igi"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="nBc-qe-2CP" firstAttribute="leading" secondItem="qxY-J9-UHo" secondAttribute="leading" constant="16" id="1iN-Z4-boe"/>
+                            <constraint firstItem="qxY-J9-UHo" firstAttribute="trailing" secondItem="W5X-Sz-dCy" secondAttribute="trailing" constant="16" id="1w7-bi-OuA"/>
+                            <constraint firstItem="NQ1-RZ-yih" firstAttribute="leading" secondItem="qxY-J9-UHo" secondAttribute="leading" constant="16" id="GSi-bx-tGu"/>
+                            <constraint firstItem="W5X-Sz-dCy" firstAttribute="top" secondItem="qxY-J9-UHo" secondAttribute="top" constant="48" id="Jef-nZ-Zdx"/>
+                            <constraint firstItem="uT3-gR-bGF" firstAttribute="top" secondItem="NQ1-RZ-yih" secondAttribute="bottom" constant="60" id="MZg-hE-YIc"/>
+                            <constraint firstItem="NQ1-RZ-yih" firstAttribute="top" secondItem="W5X-Sz-dCy" secondAttribute="bottom" constant="9.5" id="Rbt-Lp-4ka"/>
+                            <constraint firstItem="nBc-qe-2CP" firstAttribute="top" secondItem="NQ1-RZ-yih" secondAttribute="bottom" constant="30" id="Ye6-r4-jve"/>
+                            <constraint firstItem="W5X-Sz-dCy" firstAttribute="leading" secondItem="qxY-J9-UHo" secondAttribute="leading" constant="16" id="ZMJ-yn-plV"/>
+                            <constraint firstItem="qxY-J9-UHo" firstAttribute="trailing" secondItem="uT3-gR-bGF" secondAttribute="trailing" constant="16" id="bAI-wa-wgJ"/>
+                            <constraint firstItem="uT3-gR-bGF" firstAttribute="leading" secondItem="qxY-J9-UHo" secondAttribute="leading" constant="16" id="leP-T4-K2k"/>
+                            <constraint firstItem="qxY-J9-UHo" firstAttribute="trailing" secondItem="nBc-qe-2CP" secondAttribute="trailing" constant="16" id="psu-tE-txg"/>
+                            <constraint firstItem="qxY-J9-UHo" firstAttribute="trailing" secondItem="NQ1-RZ-yih" secondAttribute="trailing" constant="16" id="wNj-zE-02t"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="qxY-J9-UHo"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="SXU-hI-Iay">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="OCD-0b-de9">
+                            <connections>
+                                <action selector="cancelPressed:" destination="jRn-pM-2NZ" id="NGX-qd-iVc"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="o38-7l-pCA">
+                            <connections>
+                                <segue destination="NIA-Y8-heg" kind="unwind" identifier="UnwindFromSave" unwindAction="unwindFromDetailViewControllerWithSegue:" id="xTO-TT-wyK"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="saveBarButton" destination="o38-7l-pCA" id="ds3-k7-XhR"/>
+                        <outlet property="toDoField" destination="NQ1-RZ-yih" id="Xmp-hd-RiB"/>
+                        <outlet property="toDoNoteView" destination="uT3-gR-bGF" id="MXH-qo-zLa"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ekf-wW-9sL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="NIA-Y8-heg" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="1960.8" y="115.59220389805098"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="BWE-GA-Vtr">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="xxl-DR-rug" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="GFf-kT-Hbf">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Upl-3R-Km6"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xtJ-UQ-TTe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-273" y="117"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="fD6-Tq-q9N">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="WU6-lQ-EhQ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="4o0-mz-WQm">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="jRn-pM-2NZ" kind="relationship" relationship="rootViewController" id="Mp4-lb-GFV"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="O9X-X2-GDn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1196" y="479"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="5Rm-Fa-MsB"/>
+    </inferredMetricsTieBreakers>
 </document>
